pxc/tests/test_093_text/tbl_bugfix1.px
namespace tbl_bugfix1;
import common -;
import io::text -;

mtvaluetype struct ent {
  string key;
  int x;
  int y;
}

{
  const f = system.open("hoge.text", O_RDONLY, 0).value;
  f.read_records{record_cb, 0}(); // error: es is not defined yet
  vector{ent} es;
  threaded function bool record_cb(ent const& e) {
    es.push_back(e);
    return true;
  }
  println(es);
}

